package planta.modele;

/**
 * Type de plante : interieur ou exterieur
 */
public enum TypePlante {
    INTERIEUR,
    EXTERIEUR
}
